final-step.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;0,9..40,1000;1,9..40,100;1,9..40,200;1,9..40,300;1,9..40,400;1,9..40,500;1,9..40,600;1,9..40,700;1,9..40,900&family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500;1,700;1,900&family=Roboto:ital,wght@0,300;1,400;1,500&display=swap");
* {
  margin: 0;
  padding: 0;
  font-family: "DM Sans", sans-serif;
  box-sizing: border-box;
}

.main {
  position: relative;
  top: 20px;
}
.title {
  position: relative;
  font-size: 40px;
  font-weight: 700;
  left: 50px;
  width: 1000px;
}
.widgits {
  display: flex;
  gap: 120px;
}
.social-media {
  position: relative;
  width: 400px;
  height: fit-content;
  border: rgb(215, 215, 215) solid 1px;
  border-radius: 10px;
  top: 20px;
  left: 50px;
  display: flex;
  flex-direction: column;
}
.social-media h1 {
  text-align: center;
  padding-top: 10px;
}
.socials {
  position: relative;
  left: 30px;
  border-radius: 7px;
  display: flex;
  margin-bottom: 20px;
}
.socials img {
  width: 40px;
  height: 40px;
  position: relative;
  top: 4px;
}
.socials input {
  position: relative;
  left: 10px;
  top: 4px;
  width: 65%;
  border-radius: 7px;
  border-style: none;
  padding: 10px;
  height: 40px;
  background-color: rgb(235, 235, 235);
}
.socials button {
  position: relative;
  top: 4px;
  left: 30px;
  background-color: rgb(255, 89, 89);
  color: white;
  border-style: none;
  width: 80px;
  border-radius: 7px;
}
.bio {
  display: flex;
  flex-direction: column;
}
.bio img {
  width: 40px;
  height: 40px;
  position: relative;
  top: 4px;
  left: 30px;
}
.bio textarea {
  position: relative;
  top: 15px;
  width: 80%;
  left: 30px;
  padding: 10px;
  margin-bottom: 20px;
}
.bio button {
  position: relative;
  top: 20px;
  left: 30px;
  background-color: rgb(255, 89, 89);
  color: white;
  border-style: none;
  width: 80px;
  height: 40px;
  border-radius: 7px;
}
.custom1 img,
.custom2 img {
  position: relative;
  width: 40px;
  height: 40px;
  position: relative;
  top: 4px;
  left: 30px;
}
.custom1 label,
.custom2 label {
  position: relative;
  padding: 10px;
  border-radius: 7px;
  color: white;
  left: 50px;
  top: -10px;
  background-color: rgb(95, 95, 255);
}
.custom1 h2,
.custom2 h2 {
  position: relative;
  left: 30px;
}
.custom1 input,
.custom2 input {
  position: relative;
  left: 60px;
  top: -10px;
  height: 40px;
  position: relative;
  border-radius: 7px;
  border-style: none;
  padding: 10px;
  height: 40px;
  background-color: rgb(235, 235, 235);
}
.custom1 button {
  position: relative;
  top: 10px;
  left: 70px;
  background-color: rgb(255, 89, 89);
  color: white;
  border-style: none;
  width: 80px;
  height: 40px;
  border-radius: 7px;
}
.custom2 button {
  position: relative;
  top: 40px;
  left: -220px;
  background-color: rgb(255, 89, 89);
  color: white;
  border-style: none;
  width: 80px;
  height: 40px;
  border-radius: 7px;
}
.custom2 {
  margin-bottom: 25px;
}
.custom1 {
  margin-top: 20px;
  margin-bottom: 25px;
}
.social-custom {
  position: relative;
  width: 400px;
  height: fit-content;
  border: rgb(215, 215, 215) solid 1px;
  border-radius: 10px;
  top: 20px;
  left: 50px;
  display: flex;
  flex-direction: column;
  gap: 20px;
}
@media only screen and (max-width: 800px) {
  .title {
    font-size: 30px;
    width: 95%;
    left: 10px;
    background-color: aqua;
  }
  .social-media {
    width: 95%;
    left: 5%;
  }
  .widgits {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 10px;
  }
  .custom1 input,
  .custom2 input {
    width: 38%;
  }
  .social-custom {
    width: 95%;
    left: 5%;
    margin-bottom: 100px;
  }
}

